--- a/main.html
+++ b/main.html
@@ -7,6 +7,42 @@
 </head>
 
 <body>
+	<div class="container">
+    <h1>Architecture Through Ages</h1>
+		
+		<div class="imageContainer">
+			<img src="https://images.pexels.com/photos/1109541/pexels-photo-1109541.jpeg" alt="Architecture Banner">
+		</div>
+		<table>
+			<tr>
+				<td class="image-cell">
+					<img src="https://media.istockphoto.com/id/1183288395/photo/architects-working-on-blueprint-real-estate-project-architect-workplace-architectural-project.jpg?s=1024x1024&w=is&k=20&c=ycEaBFyW_77fTQranCfV4C32vOWQExMmh2OZpMsvuxM=" alt="Building 1">
+				</td>
+				<td class="text-cell">
+					<p> Ancient architecture reflects the cultural identity and craftsmanship of civilizations.
+            From Egyptian pyramids to Roman aqueducts, these constructions show technical mastery.
+					</p>
+				</td>
+				<td class="image-cell">
+					<img src="https://media.istockphoto.com/id/931649246/photo/architects-working-on-blueprint-real-estate-project-architect-workplace-architectural-project.jpg?s=2048x2048&w=is&k=20&c=zIlJLgFJt0jhCwKQ-NW9SEcPkDgIS0wCeEVnxzIcxo0=" alt="Building 2">
+				</td>
+			</tr>
+			<tr>
+				<td class="image-cell">
+					<img src="https://media.istockphoto.com/id/800967062/photo/hands-of-engineer-working-on-blueprint-construction-concept-engineering-tools-vintage-tone.jpg?s=612x612&w=0&k=20&c=Y-dzOXOaP8bFumW2dDRle__I9_oiMDwPGHuJSq8SzdM=" alt="Modern 1">
+				</td>
+				<td class="text-cell">
+					<p>Modern architecture emphasizes function and minimalism. Skyscrapers and eco-friendly
+            buildings now define city skylines with innovative design and sustainable materials.
+					</p>
+				</td>
+				<td class="image-cell">
+					<img src="https://media.istockphoto.com/id/800967062/photo/hands-of-engineer-working-on-blueprint-construction-concept-engineering-tools-vintage-tone.jpg?s=612x612&w=0&k=20&c=Y-dzOXOaP8bFumW2dDRle__I9_oiMDwPGHuJSq8SzdM=" alt="Modern 2">
+				</td>
+			</tr>
+		</table>
+	</div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
